portfolio header change

--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,8 @@
 .jumbotron{
-    background: url(../assets/pinkTulips.jfif) center center;
+    background: url(../assets/julesPainting.jpg) center center;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 80vh;
+    height: 45vh;
     text-align: center;
 }
